--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "openPhases" : ["phaseTeamResponse"],
+  "openPhases" : ["phaseTesterResponse"],
   "phaseBugReporting": "public_data",
   "phaseTeamResponse": "public_data",
   "phaseTesterResponse": "public_data",
